<resources>

    <string name="app_name">Random user</string>
    <string name="unknownError">Unknown error</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cell">Cell</string>

</resources>