<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <com.opeqe.userlist.view.CustomImageView
        android:id="@+id/profileIv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:roundAsCircle="true" />

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceHeadline5"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/profileIv"
        app:layout_constraintTop_toTopOf="@+id/profileIv"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/genderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toStartOf="@+id/nameTv"
        app:layout_constraintTop_toBottomOf="@+id/nameTv"
        tools:text="@string/gender" />

    <TextView
        android:id="@+id/locationTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:textAppearance="?textAppearanceBody2"
        app:layout_constraintStart_toStartOf="@+id/genderTv"
        app:layout_constraintTop_toBottomOf="@+id/genderTv"
        tools:text="@string/location" />


</androidx.constraintlayout.widget.ConstraintLayout>